intelliJ: - risoluzione warning